feat: add event publisher, with phase 0 synchronous DB publisher